# market-research-lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  current_status.md  pyproject.toml
framework/: evaluation_protocol.md
notes/: 01_volatility_estimator_calibration.md  02_source_selection_principles.md  glossary.md
shared/: compute_volatility.py  diagnostic_vol.py  fetch_market_data.py  test_connections.py
shared/sql/: 001_create_schema.sql  002_create_source_signals.sql
sources/01_vix/: README.md  analysis.ipynb  fetch.py  verdict.md
sources/02_yield_curve/: README.md  analysis.ipynb  fetch.py  verdict.md
sources/03_polymarket_fed/: README.md
