[project]
name = "market-research-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.12",
]
